package NYT.NChunkHolder.NProto;

import "chunk.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqStartChunk
{
    required bytes ChunkId = 1;
    required int32 WindowSize = 2;
}

message TRspStartChunk
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqFinishChunk
{
    required bytes ChunkId = 1;
    required NYT.NChunkServer.NProto.TChunkAttributes Attributes = 2;
}

message TRspFinishChunk
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqPutBlocks
{
    required bytes ChunkId = 1;
    required int32 StartBlockIndex = 2;
}

message TRspPutBlocks
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqSendBlocks
{
    required bytes ChunkId = 1;
    required string Address = 2;
    required int32 StartBlockIndex = 3;
    required int32 BlockCount = 4;
}

message TRspSendBlocks
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqFlushBlock
{
    required bytes ChunkId = 1;
    required int32 BlockIndex = 2;
}

message TRspFlushBlock
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqGetBlocks
{
    required bytes ChunkId = 1;
    repeated int32 BlockIndexes = 2;
}

message TRspGetBlocks
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqPingSession
{
    required bytes ChunkId = 1;
}

message TRspPingSession
{
}

////////////////////////////////////////////////////////////////////////////////

